# Multi_AI_Agent_Systems

./: README.md  pyproject.toml  requirements.txt
notebooks/: First multi AI agents.ipynb  Senior_AI.ipynb  create_your_own_tool.ipynb  deep_search.ipynb  prompt.txt  prompt_engineering.ipynb
scripts/: utils.py
